--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,165 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*,*:before,*:after {
+  box-sizing: inherit;
+  -webkit-user-select: inherit;
+  user-select: inherit;
+  -webkit-user-drag: inherit;
+  -webkit-tap-highlight-color: inherit;
+  backface-visibility: inherit
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0
+}
+
+html {
+  --vw: 13.76px;
+  --vh: 3.39px;
+  --vmax: 13.76px;
+  --vmin: 3.39px;
+
+  line-height: 1;
+  box-sizing: border-box;
+  -webkit-user-select: none;
+  user-select: none;
+  -webkit-user-drag: none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0)
+}
+
+
+main,canvas {
+  display: block;
+}
+
+
+h1,h2,h3,h4,h5,h6 {
+  font-weight: inherit;
+  font-size: inherit
+}
+
+a {
+  color: inherit;
+  text-decoration: none
+}
+
+ol,ul {
+  list-style: none
+}
+
+:root{
+  --bg:hsl(0, 0%, 5%);
+  --pad: max(20px, 4vmin);
+  --fs-text: 12px;
+  --c-bg: hsl(0, 0%, 90%);
+  --c-text: hsl(0, 0%, 100%);
+}
+
+
+@media(min-width: 800px) {
+  :root {
+      --fs-text: 13px;
+  }
+}
+
+
+/* @font-face {
+  font-family: 'Neue Montreal';
+  src: url('../public/font/NeueMontreal/OTF/PPNeueMontreal-Thin.otf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Neue Montreal Mono';
+  src: url('../public/font/NeueMontreal/Mono/otf/PPNeueMontrealMono-Thin.otf') format('truetype');
+} */
+
+@font-face {
+  font-family: "Neue Montreal";
+  font-weight: 400;
+  src: url("../public/font/NeueMontreal/OTF/PPNeueMontreal-Thin.otf") format("truetype");
+}
+
+@font-face {
+  font-family: "Neue Montreal";
+  font-weight: 600;
+  src: url("../public/font/NeueMontreal/OTF/PPNeueMontreal-Bold.otf") format("truetype");
+}
+
+@font-face {
+  font-family: "Neue Montreal Mono";
+  font-weight: 200;
+  src: url("../public/font/NeueMontreal/Mono/otf/PPNeueMontrealMono-Thin.otf") format("truetype");
+}
+
+@font-face {
+  font-family: "Neue Montreal Mono";
+  font-weight: 400;
+  src: url("../public/font/NeueMontreal/Mono/otf/PPNeueMontrealMono-Book.otf") format("truetype");
+}
+
+@font-face {
+  font-family: "Neue Montreal Mono";
+  font-weight: 600;
+  src: url("../public/font/NeueMontreal/Mono/otf/PPNeueMontrealMono-Bold.otf") format("truetype");
+}
+
+html,body {
+  height: 100%
+}
+
+body {
+  background-color: var(--bg);
+  font-family: "Neue Montreal";
+  font-weight: 600;
+  font-size: var(--fs-text);
+  font-feature-settings: "palt";
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  overscroll-behavior: none
+}
+
+.monospaced  {
+  font-family: "Neue Montreal Mono";
+}
+
+
+.App{
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: var(--bg);
+  color: #fff;
+  white-space: nowrap;
+  transition-property: background-color;
+  transition-duration: .9s;
+  transition-timing-function: cubic-bezier(0.1, 0.4, 0.2, 1)
+}
+
+#light   {
+  background-color: var(--c-bg);
+  color:var(--c-text);
+}
+
+
+
+.text-btn {
+  transition-property: opacity;
+  transition-duration: .4s;
+  transition-timing-function: cubic-bezier(0.1, 0.4, 0.2, 1);
+}
+
+
+#Background {
+  position: fixed;
+  z-index: 1;
+  left: var(--pad);
+  right: var(--pad);
+  top: var(--pad);
+  bottom: var(--pad);
+  pointer-events: none;
+  overflow: hidden;
 }
